<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="25dp"
                android:elevation="10dp">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:src="@drawable/logo_app"/>
            </RelativeLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="25dp">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="15dp"
                    android:layout_marginEnd="5dp"
                    android:background="@drawable/rounded_edittext">
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/search"
                        android:layout_gravity="center_vertical"/>
                    <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:background="@drawable/rounded_edittext"
                        android:hint="@string/search_bar"
                        android:textColor="@color/search_text"
                        android:inputType="text"
                        />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    >
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:src="@drawable/voice"
                        android:padding="10dp"
                        android:background="@drawable/rounded_voice_search"/>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="25dp"
                android:orientation="vertical">
                <androidx.viewpager.widget.ViewPager
                    android:id="@+id/main_slider_image"
                    android:layout_width="match_parent"
                    android:layout_height="150dp" />
                <me.relex.circleindicator.CircleIndicator
                    android:id="@+id/circle_indicator"
                    android:layout_width="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_gravity="center_horizontal"
                    app:ci_drawable="@drawable/bg_indicator"
                    android:layout_height="40dp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="4"
                android:paddingStart="25dp"
                android:paddingEnd="25dp">
                <LinearLayout

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">
                    <ImageView
                        android:id="@+id/van_hoc_icon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:src="@drawable/van_hoc_icon"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/text_color"
                        android:textStyle="bold"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/van_hoc_text"/>
                </LinearLayout>
                <LinearLayout

                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <ImageView
                        android:id="@+id/kinh_te_icon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:src="@drawable/kinh_te_icon"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/text_color"
                        android:textStyle="bold"
                        android:layout_gravity="center_horizontal"
                        android:text="Kinh tế"/>
                </LinearLayout>
                <LinearLayout

                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <ImageView
                        android:id="@+id/tam_ly_icon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/text_color"
                        android:textStyle="bold"
                        android:layout_gravity="center"
                        android:src="@drawable/tam_ly_icon"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/text_color"
                        android:textStyle="bold"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/tam_ly_ky_nang_song_text"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">
                    <ImageView
                        android:id="@+id/giaoDucImageView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/text_color"
                        android:textStyle="bold"
                        android:layout_gravity="center"
                        android:src="@drawable/giao_duc_icon"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:maxLines="1"
                        android:textColor="@color/text_color"
                        android:textStyle="bold"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/nuoi_day_con"/>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="4"
                android:layout_marginTop="10dp"
                android:paddingStart="25dp"
                android:paddingEnd="25dp">
                <LinearLayout

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">
                    <ImageView
                        android:id="@+id/thieu_nhi"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:src="@drawable/thieu_nhi"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/text_color"
                        android:textStyle="bold"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/sach_thieu_nhi_text"/>
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/sach_thieu_nhi_icon"
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <ImageView
                        android:id="@+id/tieu_su_hoi_ky"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:src="@drawable/tieu_su_hoi_ky"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/text_color"
                        android:textStyle="bold"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/tieu_su_hoi_ky_text"/>
                </LinearLayout>
                <LinearLayout

                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <ImageView
                        android:id="@+id/giaoKhoaIcon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/text_color"
                        android:textStyle="bold"
                        android:layout_gravity="center"
                        android:src="@drawable/giao_khoa"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/text_color"
                        android:textStyle="bold"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/giao_khoa_tham_khao_text"/>
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/giao_khoa_tham_khao"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">
                    <ImageView
                        android:id="@+id/ngoai_ngu"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/text_color"
                        android:textStyle="bold"
                        android:layout_gravity="center"
                        android:src="@drawable/ngoai_ngu"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:maxLines="1"
                        android:textColor="@color/text_color"
                        android:textStyle="bold"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/sach_hoc_ngoai_ngu_text"/>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="25dp">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/trending_text"
                        android:textStyle="bold"
                        android:textSize="25sp"
                        android:textColor="#9775FA"
                        android:padding="10dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentBottom="true"
                        android:layout_centerInParent="true"
                        android:textColor="@color/search_text"
                        android:text="@string/xem_them_text" />
                </RelativeLayout>
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/thinhHanhRecyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="25dp"
                android:layout_marginBottom="25dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/new_text"
                    android:textStyle="bold"
                    android:textSize="25sp"
                    android:textColor="#9775FA"
                    android:padding="10dp" />
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/newBookRecyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
        </LinearLayout>

    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>